--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "my-cloud"
+name = "All Logs"
 version = "0.1.0"
 description = ""
 authors = ["Arthur Alves <arthuralves2p@gmail.com>"]
@@ -11,7 +11,7 @@ fastapi = { extras = ["standard"], version = "^0.115.8" }
 tortoise-orm = { extras = ["psycopg"], version = "^0.24.0" }
 aerich = { extras = ["toml"], version = "^0.8.1" }
 asyncpg = "^0.30.0"
-uvicorn = {extras = ["standard"], version = "^0.34.0"}
+uvicorn = { extras = ["standard"], version = "^0.34.0" }
 
 
 [tool.poetry.group.dev.dependencies]
