--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,11 @@
 services:
-  minio:
-    image: minio/minio
-    container_name: minio-storage
-    command: server --console-address ":9001" /data
-    environment:
-      MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: arth1234
-    volumes:
-      - minio-data:/data
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    networks:
-      - minio-net
-
-  minio-init:
-    image: minio/mc
-    depends_on:
-      - minio
-    entrypoint: ['/bin/sh', '-c']
-    environment:
-      MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: arth1234
-    command: >
-      sleep 5 &&
-      /usr/bin/mc alias set minio http://minio:9000 "$$MINIO_ROOT_USER" "$$MINIO_ROOT_PASSWORD" &&
-      /usr/bin/mc mb --ignore-existing minio/storage
-    networks:
-      - minio-net
-
   postgres:
     image: postgres:latest
     container_name: postgres-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: cloud
+      POSTGRES_DB: app
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
