--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     image: dpage/pgadmin4
     container_name: pgadmin
     environment:
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
       PGADMIN_DEFAULT_EMAIL: arthuralves2p@gmail.com
       PGADMIN_DEFAULT_PASSWORD: 1234
     ports:
