--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"
 httpx = "^0.28.1"
 beanie = "^1.29.0"
+bcrypt = "^4.2.1"
 
 [tool.poetry.dependencies.fastapi]
 extras = ["standard"]
@@ -43,6 +44,7 @@ ignore = [
     "I",
     "D100",
     "D101",
+    "D102",
     "D103",
     "D104",
     "D106",
