--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pytest-asyncio = "^0.25.3"
 httpx = "^0.28.1"
 beanie = "^1.29.0"
 bcrypt = "^4.2.1"
+pyjwt = "^2.10.1"
+pydantic-settings = "^2.7.1"
 
 [tool.poetry.dependencies.fastapi]
 extras = ["standard"]
