--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,12 @@ services:
     networks:
       - db-net
 
+  api:
+    build: .
+    container_name: api
+    networks:
+      - db-net
+
 networks:
   db-net:
     driver: bridge
